# fractal

./: CLAUDE.md  Cargo.toml  PLAN.md
crates/fpa-bus/: Cargo.toml
crates/fpa-bus/docs/: SPECIFICATION.md
crates/fpa-bus/src/: async_bus.rs  bus.rs  deferred.rs  in_process.rs  lib.rs  network_bus.rs  network_message.rs
crates/fpa-bus/tests/: deferred.rs  fpa_004.rs  fpa_007.rs  fpa_008.rs  fpa_035.rs  network_bus.rs
crates/fpa-compositor/: Cargo.toml
crates/fpa-compositor/docs/: SPECIFICATION.md
crates/fpa-compositor/src/: compose.rs  compositor.rs  direct_signal.rs  double_buffer.rs  fault.rs  lib.rs  multi_rate.rs  state_machine.rs  supervisory.rs
crates/fpa-compositor/tests/: fpa_001_fractal.rs  fpa_004_runtime_transport.rs  fpa_006.rs  fpa_006_bus.rs  fpa_008_multilayer.rs  fpa_009.rs  fpa_009_cross_strategy.rs  fpa_009_multirate.rs  fpa_009_supervisory.rs  fpa_010.rs  fpa_011.rs  fpa_012.rs  fpa_013.rs  fpa_014.rs  fpa_022.rs  fpa_023.rs  fpa_023_bus.rs  fpa_024.rs  fpa_037.rs
crates/fpa-config/: Cargo.toml
crates/fpa-contract/: Cargo.toml
crates/fpa-events/: Cargo.toml
crates/fpa-testkit/: Cargo.toml
crates/fpa-testkit/benches/: bench_buffer.rs  bench_bus.rs  bench_tick.rs
crates/fpa-testkit/docs/: SPECIFICATION.md
crates/fpa-testkit/src/: lib.rs  reference.rs  registry.rs  system.rs  test_partitions.rs
crates/fpa-testkit/test-configs/: basic.toml  multirate-sensor.toml  sensor-follower.toml
crates/fpa-testkit/tests/: eval_determinism.rs  eval_ergonomics.rs  eval_replaceability.rs  fpa_030.rs  fpa_031.rs  fpa_033.rs  fpa_033_bus.rs  fpa_034.rs  fpa_035_transport.rs  fpa_038.rs
docs/design/: CONVENTIONS.md  FLUSH_ON_ERROR_DESIGN.md  PRINCIPLES_CHECKLIST.md  REFERENCE_DOMAINS.md  SPECIFICATION.md
docs/evaluation/: determinism-and-transport.md  ergonomics-and-performance.md  replaceability.md
docs/explanation/: applications-of-the-fractal-partition-pattern.md  bus-performance-and-data-paths.md  communication-in-the-fractal-partition-pattern.md  conventions-in-the-fractal-partition-pattern.md  events-as-a-fractal-primitive.md  execution-strategies-in-the-fractal-partition-pattern.md  fractal-partition-pattern.md  (+6 more)
(+63 files in other folders)
