[package]
name = "fpa-bus"
version.workspace = true
edition.workspace = true

[features]
default = ["json-codec"]
json-codec = ["dep:serde_json"]

[dependencies]
fpa-contract = { path = "../fpa-contract" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
toml = { workspace = true }
