[package]
name = "fpa-testkit"
version.workspace = true
edition.workspace = true

[dependencies]
fpa-contract = { path = "../fpa-contract" }
fpa-bus = { path = "../fpa-bus" }
fpa-compositor = { path = "../fpa-compositor" }
fpa-config = { path = "../fpa-config" }
toml = { workspace = true }
serde = { workspace = true }
